# fastapi-todo-ddd

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  init-user-db.sh  pyproject.toml  requirements.txt  setup.cfg  test_main.http
app/: config.py  dependencies.py  main.py
app/core/database/postgres/: database.py
app/core/error/: base_exception.py  invalid_operation_exception.py  task_exception.py  user_exception.py
app/core/models/postgres/: models.py
app/core/repositories/: base_repository.py
app/core/repository/: repository.py
app/core/services/: base_query_service.py
app/core/unit_of_work/: unit_of_work.py
app/core/use_cases/: use_case.py
app/core/user_cases/: use_case.py
app/crud/: __init__.py  task.py
app/features/task/: dependencies.py
app/features/task/data/models/: task.py  task_model.py
app/features/task/data/repositories/: task_repository_impl.py  task_unit_of_work_impl.py
app/features/task/data/services/: task_query_service_impl.py
app/features/task/domain/entities/: task_command_model.py  task_common_model.py  task_entity.py  task_query_model.py
app/features/task/domain/repositories/: task_repository.py  task_unit_of_work.py
app/features/task/domain/services/: task_query_service.py
app/features/task/domain/usecases/: create_task.py  delete_task.py  get_task.py  get_tasks.py  update_task.py
app/features/task/presentation/routers/: __init__.py  tasks.py
app/features/task/presentation/routes/: create_task_route.py  (+6 more)
app/features/user/: dependencies.py
app/schemas/: __init__.py  task.py
(+35 files in other folders)
